--- a/server/index.html
+++ b/server/index.html
@@ -98,7 +98,7 @@
       <div class="step">
         <b>① 获取服务端链接</b>
         <div class="inputrow">
-          <input id="serverInput" placeholder="https://c-1955544736917712897.ksai.scnet.cn:58043/ingest" />
+          <input id="serverInput" placeholder="https://your_server_here/ingest" />
           <button class="btn" onclick="copyServer()">复制</button>
         </div>
       </div>
